--- a/CSShtml/task8-3.html
+++ b/CSShtml/task8-3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task8-3.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/task8-3.css"/>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -42,7 +42,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="img/holder.png"></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="../img/holder.png"></a>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">关于</a></li>
                         <li><a href="#">推荐</a></li>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -87,8 +87,8 @@
            <table class="table table-bordered table1">
             <tbody>
             <tr>
-                <td class="grey">门槛  <img src="img/star.png"></td>
-                <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                <td class="grey">门槛  <img src="../img/star.png"></td>
+                <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
             </tr>
             <tr>
                 <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -115,7 +115,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -127,8 +127,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -164,7 +164,7 @@
         </div>
         <div class="col-lg-4 carrer2">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -176,8 +176,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -207,7 +207,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -219,8 +219,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -247,7 +247,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -259,8 +259,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -287,7 +287,7 @@
         </div>
         <div class="col-lg-4 carrer2">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -299,8 +299,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -327,7 +327,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -339,8 +339,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -367,7 +367,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -379,8 +379,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -410,7 +410,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -422,8 +422,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -450,7 +450,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -462,8 +462,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -490,7 +490,7 @@
         </div>
         <div class="col-lg-4 carrer2">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -502,8 +502,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -533,7 +533,7 @@
         </div>
         <div class="col-lg-4 carrer1">
             <div class="headpic">
-                <div class="item1"><img class="img-responsive" src="img/head22.png"></div>
+                <div class="item1"><img class="img-responsive" src="../img/head22.png"></div>
                 <div class="item2">
                     <h4>Web前端工程师</h4>
                     <p>Web前端开发工程师，主要职责是
@@ -545,8 +545,8 @@
             <table class="table table-bordered table1">
                 <tbody>
                 <tr>
-                    <td class="grey">门槛  <img src="img/star.png"></td>
-                    <td class="grey">难易程度 <img src="img/star.png"> <img src="img/star.png"></td>
+                    <td class="grey">门槛  <img src="../img/star.png"></td>
+                    <td class="grey">难易程度 <img src="../img/star.png"> <img src="../img/star.png"></td>
                 </tr>
                 <tr>
                     <td class="grey">成长周期<span class="red">1-3</span>年</td>
@@ -597,7 +597,7 @@
                 </div>
                 <div class="right1">
                     <p>微信公众平台</p>
-                    <span class="cc1"><img src="img/erweima.png"></span>
+                    <span class="cc1"><img src="../img/erweima.png"></span>
                 </div>
             </div>
         </div>
