--- a/CSShtml/task10-1.html
+++ b/CSShtml/task10-1.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/task10-1.css"/>
-    <script src="js/js-10.js"></script>
-    <script src="js/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/task10-1.css"/>
+    <script src="../js/js-10.js"></script>
+    <script src="../js/jquery-3.3.1.js"></script>
 </head>
 <body>
 <header>
@@ -54,9 +54,9 @@
 <input type="button" id="bt4">
  </div>
 <main>
-    <h5><img src="img/borderblue.png"> 请您按照以下步骤来定制您的纸箱</h5>
+    <h5><img src="../img/borderblue.png"> 请您按照以下步骤来定制您的纸箱</h5>
     <div class="panel panel-default boxtype">
-        <div class="panel-heading"><img src="img/box.png" alt=""> 选择箱型</div>
+        <div class="panel-heading"><img src="../img/box.png" alt=""> 选择箱型</div>
         <div class="panel-body boxtype2">
             <div class="chosebox1 pull-left">
                 <input type="radio" name="boxtype" id="dk" checked><label for="dk">对口箱</label>
@@ -65,7 +65,7 @@
             </div>
             <div class="dropdown pull-right tg1">
                 <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown">查看详情
-                    <span><img src="img/多边形11.png"></span>
+                    <span><img src="../img/多边形11.png"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#">details</a></li>
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="panel panel-default boxtype3">
-    <div class="panel-heading"><img src="img/Ruler.png" alt=""> 确定尺寸</div>
+    <div class="panel-heading"><img src="../img/Ruler.png" alt=""> 确定尺寸</div>
     <div class="panel-body boxtype2">
         <div class="chosebox1 pull-left">
             <div><span><input type="radio" name="boxtype" id="waijing" checked><label for="waijing">外径</label></span> <span
@@ -90,7 +90,7 @@
         </div>
         <div class="dropdown pull-right tg1">
             <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown">查看详情
-                <span><img src="img/多边形11.png"></span>
+                <span><img src="../img/多边形11.png"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
                 <li><a href="#">details</a></li>
@@ -101,7 +101,7 @@
     </div>
 </div>
     <div class="panel panel-default boxtype4">
-        <div class="panel-heading"><img src="img/cut.png" alt=""> 选择材质</div>
+        <div class="panel-heading"><img src="../img/cut.png" alt=""> 选择材质</div>
         <div class="panel-body boxtype2">
             <div class="chosebox1 pull-left">
 
@@ -113,7 +113,7 @@
             </div>
             <div class="dropdown pull-right tg1">
                 <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown"> 查看详情
-                    <span><img src="img/多边形11.png"></span>
+                    <span><img src="../img/多边形11.png"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu">
                     <li><a href="#">details</a></li>
@@ -148,7 +148,7 @@
             <div><p>TEL：400-0000-000</p>
                 <p>企业QQ：123456789</p>
                 <p>微信号：XXXXXXX</p></div>
-            <span class="cc1"><img src="img/erweima.png"></span>
+            <span class="cc1"><img src="../img/erweima.png"></span>
         </div>
     </div>
 </footer>
