--- a/CSShtml/task-12-2.html
+++ b/CSShtml/task-12-2.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet/less" href="less/task-12-2.less"/>
+    <link rel="stylesheet/less" href="../less/task-12-2.less"/>
     <script src="https://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
@@ -92,14 +92,14 @@
 
     <footer>
         <div class="front">
-            <img src="img/home.png" alt="">
+            <img src="../img/home.png" alt="">
             <div class="text">首页</div>
         </div>
         <div class="write">
-            <img src="img/write%20(2).png" alt="">
+            <img src="../img/write%20(2).png" alt="">
         </div>
         <div class="user">
-            <img src="img/mine.png" alt="">
+            <img src="../img/mine.png" alt="">
             <div class="text">我的</div>
         </div>
 
