--- a/CSShtml/task12.html
+++ b/CSShtml/task12.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet/less" href="less/task12.less"/>
+    <link rel="stylesheet/less" href="../less/task12.less"/>
     <script src="https://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
     <div class="content">
         <div class="section">
             <div class="head">
-                <img src="img/headpic.png" class="img-responsive"></div>
+                <img src="../img/headpic.png" class="img-responsive"></div>
             <div class="info">
                 <p class="name">高素雅 51岁</p>
                 <p class="location">北京・通州・果园</p>
@@ -30,8 +30,8 @@
             <div class="formtitle"><span>专业技能</span></div>
             <ul class="formlist">
                 <li class="require">
-                    <div class="formtag1"><span><img src="img/starbig.png" alt=""> 住家</span></div>
-                    <div class="formtag"><span><img src="img/starbig.png" alt=""> 不含餐</span></div>
+                    <div class="formtag1"><span><img src="../img/starbig.png" alt=""> 住家</span></div>
+                    <div class="formtag"><span><img src="../img/starbig.png" alt=""> 不含餐</span></div>
                 </li>
                 <li class="lable">
                     <span class="span1">从业年限</span>
