--- a/CSShtml/task12.html
+++ b/CSShtml/task12.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <span class="pip"><a href="#" class="arrow"><img src="img/arrow.png" class="arrow"></a></span>
+    <span class="pip"><a href="#" class="arrow"><img src="../img/arrow.png" class="arrow"></a></span>
     <span class="frontpage">个人主页</span>
     <span class="pip"></span>
 </header>
