--- a/CSShtml/task14.html
+++ b/CSShtml/task14.html
@@ -6,104 +6,66 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task14.css"/>
-    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/hover.css">
+    <link rel="stylesheet/less" href="../less/task14.less"/>
+    <script src="https://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
 <header>
-<div class="contact">
-    <div>咨询电话:8208208820</div>
-    <div>
-        <a href=""><span><img src="img/wechat.png" alt=""></span></a>
-        <a href=""><span><img src="img/qq.png" alt=""></span></a>
-        <a href=""><span><img src="img/sina.png" alt=""></span></a>
+    <div class="contact">
+        <div>咨询电话:8208208820</div>
+        <div>
+            <a href=""><span><img src="../img/wechat.png" alt=""></span></a>
+            <a href=""><span><img src="../img/qq.png" alt=""></span></a>
+            <a href=""><span><img src="../img/sina.png" alt=""></span></a>
+        </div>
     </div>
-</div>
-<div class="cellphone">
-    <a href=""><i class="fa fa-phone"></i></a>
-    <a href=""><i class="fa fa-bell"></i></a>
-    <a href="">写</a>
-    <a href="">日报</a>
-    <a href="">1班</a>
-    <a href="">CSS</a>
-    <a href="">退出</a>
-</div>
-<div class="navigation">
-    <div><span><img src="img/jinengshu.png" alt=""></span>
-        <span class="link"><a href="">首页</a>
+    <div class="cellphone">
+        <a href=""><i class="fa fa-phone"></i></a>
+        <a href=""><i class="fa fa-bell"></i></a>
+        <a href="">写</a>
+        <a href="">日报</a>
+        <a href="">1班</a>
+        <a href="">CSS</a>
+        <a href="">退出</a>
+    </div>
+    <div class="navigation">
+        <div><span><img src="../img/jinengshu.png" alt=""></span>
+            <span class="link"><a href="">首页</a>
         <a href="">职业</a>
         <a href="">推荐</a>
-        <a  class="left" href="">关于</a>
+        <a class="left" href="">关于</a>
             </span>
+        </div>
     </div>
-</div>
-<div class="clearfix"></div>
-<!--手机页面下拉菜单-->
-<div class="dropdown">
-    <button type="button" class="btn dropdown-toggle btn1" id="dropdownMenu1"
-            data-toggle="dropdown">
-        <img src="img/holder.png" alt="">
-    </button>
-    <ul class="dropdown-menu menu1" role="menu" aria-labelledby="dropdownMenu1">
-        <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">职业精英</a>
-        </li>
-        <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">线上学习</a>
-        </li>
-        <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#">我的学员</a>
-        </li>
-    </ul>
-</div>
+    <!--手机页面下拉菜单-->
+    <div class="dropdown">
+        <button class="dropbtn" onclick="show()"><img src="../img/holder.png" alt=""></button>
+        <div class="dropdown-content" id="showme">
+            <a href="">首页</a>
+            <a href="">关于</a>
+            <a href="">职业</a>
+        </div>
+    </div>
 </header>
 <main>
-    <div id="myCarousel" class="carousel slide lunbotu">
-        <!-- 轮播（Carousel）指标 -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <!-- 轮播（Carousel）项目 -->
-        <div class="carousel-inner">
-            <div class="item active">
-                <img src="img/Image.jpg" class="imgw" alt="First slide">
-            </div>
-            <div class="item">
-                <img src="img/Image.jpg" class="imgw" alt="Second slide">
-            </div>
-            <div class="item">
-                <img src="img/Image.jpg" class="imgw" alt="Third slide">
-            </div>
-        </div>
-        <!-- 轮播（Carousel）导航 -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+    <div class="lunbo"><img src="../img/Image.jpg" alt=""></div>
     <!--我们的优势-->
     <div class="howtolearn">
         <div class="item1">
-            <span><img src="img/rocket.png">
+            <span><img src="../img/rocket.png">
             </span>
             <span>高效</span>
             <p class="standard">将五到七年的成长时间，缩短
                 到一年到三年。</p>
         </div>
         <div class="item2">
-            <span><img src="img/archive.png" alt=""></span><span>规范</span>
+            <span><img src="../img/archive.png" alt=""></span><span>规范</span>
             <p>标准的实战教程，不会走弯路</p>
         </div>
         <div class="item3">
-            <span><img src="img/Shape253.png" alt=""></span>
+            <span><img src="../img/Shape253.png" alt=""></span>
             <span>人脉</span>
             <p>同班好友，同院学长，技术大师，
                 入学就混入职脉圈，为以后铺平
@@ -122,65 +84,66 @@
 
         <div class="item10">
             <span class="num">1</span><span></span>匹配你现在的个人情况
-            寻找适合自己的岗位<span><img src="img/arrowgreen.png" alt=""></span>
+            寻找适合自己的岗位<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
         <div class="item10">
             <span class="num">2</span><span></span>了解职业前景薪金待遇、
-            竞争压力等<span><img src="img/arrowgreen.png" alt=""></span>
+            竞争压力等<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
         <div class="item11">
-            <span class="num">3</span><span></span>掌握行业内顶级技能<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">3</span><span></span>掌握行业内顶级技能<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
         <div class="item11">
-            <span class="num">4</span><span></span>查看职业目标任务<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">4</span><span></span>查看职业目标任务<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
     </div>
     <div class="theway">
 
         <div class="item10">
-            <span class="num">1</span><span></span>匹配你现在的个人情况
-            寻找适合自己的岗位<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">5</span><span></span>参考学习资源，掌握 技能点，逐个完成任务
+            寻找适合自己的岗位<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
         <div class="item10">
-            <span class="num">2</span><span></span>了解职业前景薪金待遇、
-            竞争压力等<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">6</span><span></span>加入班级，和小伙伴们 互帮互助，一块学习
+            竞争压力等<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
         <div class="item11">
-            <span class="num">3</span><span></span>掌握行业内顶级技能<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">7</span><span></span>选择导师，一路引导， 加速自己成长<span><img src="../img/arrowgreen.png"
+                                                                               alt=""></span>
         </div>
         <div class="item11">
-            <span class="num">4</span><span></span>查看职业目标任务<span><img src="img/arrowgreen.png" alt=""></span>
+            <span class="num">8</span><span></span>完成职业技能，升级业界大牛<span><img src="../img/arrowgreen.png" alt=""></span>
         </div>
     </div>
     <h3>优秀学员展示</h3>
     <div class="student">
-        <div>
-            <span><img src="img/Avatar1.png" alt="" class="img-circle"></span>
-            <span>技术顾问</span><span>百度技术总监：互联网基础
+        <div class="hvr-grow">
+            <span><img src="../img/Avatar.png" alt="" class="img-circle"></span>
+            <span>技术顾问</span><span class="content">百度技术总监：互联网基础
 服务领域，从事虚拟主机、
 云服务器、域名。曾任新网
 高级技术经理，负责技术研
 发、团队管理与建设。</span>
         </div>
-        <div>
-            <span><img src="img/Avatar1.png" alt="" class="img-circle"></span>
-            <span>技术顾问</span><span>百度技术总监：互联网基础
+        <div class="hvr-grow">
+            <span><img src="../img/Avatar1.png" alt="" class="img-circle"></span>
+            <span>技术顾问</span><span class="content">百度技术总监：互联网基础
 服务领域，从事虚拟主机、
 云服务器、域名。曾任新网
 高级技术经理，负责技术研
 发、团队管理与建设。</span>
         </div>
-        <div>
-            <span><img src="img/Avatar1.png" alt="" class="img-circle"></span>
-            <span>技术顾问</span><span>百度技术总监：互联网基础
+        <div class="hvr-grow">
+            <span><img src="../img/Avatar2.png" alt="" class="img-circle"></span>
+            <span>技术顾问</span><span class="content">百度技术总监：互联网基础
 服务领域，从事虚拟主机、
 云服务器、域名。曾任新网
 高级技术经理，负责技术研
 发、团队管理与建设。</span>
         </div>
-        <div>
-            <span><img src="img/Avatar1.png" alt="" class="img-circle"></span>
-            <span>技术顾问</span><span>百度技术总监：互联网基础
+        <div class="hvr-grow">
+            <span><img src="../img/Avatar3.png" alt="" class="img-circle"></span>
+            <span>技术顾问</span><span class="content">百度技术总监：互联网基础
 服务领域，从事虚拟主机、
 云服务器、域名。曾任新网
 高级技术经理，负责技术研
@@ -189,11 +152,11 @@
     </div>
     <h3>战略合作企业</h3>
     <div class="company">
-        <span><img src="img/alibaba.png" alt=""></span>
-        <span><img src="img/jinshan.png" alt=""></span>
-        <span><img src="img/huanqiu.png" alt=""></span>
-        <span><img src="img/ronglian.png" alt=""></span>
-        <span><img src="img/qiniu.png" alt=""></span>
+        <span><img src="../img/alibaba.png" alt=""></span>
+        <span><img src="../img/jinshan.png" alt=""></span>
+        <span><img src="../img/huanqiu.png" alt=""></span>
+        <span><img src="../img/ronglian.png" alt=""></span>
+        <span><img src="../img/qiniu.png" alt=""></span>
     </div>
     <h3>友情链接</h3>
     <div class="links">
@@ -239,10 +202,12 @@
         </div>
         <div class="fr">
             <span>微信公众平台</span>
-            <img src="img/erweima.png" alt="">
+            <img src="../img/erweima.png" alt="">
         </div>
     </div>
 </footer>
 <div class="copyright">Copyright © 2015技能树 www.jnshu.com All Rights Reserved | 京ICP备13005880号</div>
+<script src="../js/jquery-3.3.1.js"></script>
+<script src="../js/task8.js"></script>
 </body>
 </html>
