--- a/CSShtml/task10.html
+++ b/CSShtml/task10.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/task10.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/task10.css"/>
 </head>
 <body>
 <header>
@@ -54,10 +54,10 @@
        </div>
     </div>
     <div class="orderbystep">
-        <h5><img src="img/borderblue.png"> 请您按照以下步骤来定制您的纸箱</h5>
+        <h5><img src="../img/borderblue.png"> 请您按照以下步骤来定制您的纸箱</h5>
         <div class="panel panel-default noborder">
             <div class="panel-heading chosebox">
-                <img src="img/box.png">选择箱型
+                <img src="../img/box.png">选择箱型
             </div>
             <div class="panel-body boxtype2">
             <div class="chosebox1 pull-left">
@@ -67,7 +67,7 @@
             </div>
                 <div class="dropdown pull-right tg1">
                     <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown">查看详情
-                        <span><img src="img/多边形11.png"></span>
+                        <span><img src="../img/多边形11.png"></span>
                     </button>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#">details</a></li>
@@ -79,7 +79,7 @@
         </div>
         <div class="panel panel-default size">
             <div class="panel-heading chosebox">
-                <img src="img/Ruler.png">确定尺寸
+                <img src="../img/Ruler.png">确定尺寸
             </div>
             <div class="panel-body boxtype">
                 <div class="chosebox1">
@@ -97,14 +97,14 @@
 
                 <div class="dropdown pull-right drop2">
                     <button type="button" class="btn dropdown-toggle details1" id="dropdownMenu1" data-toggle="dropdown">查看详情
-                        <span><img src="img/多边形11.png"></span>
+                        <span><img src="../img/多边形11.png"></span>
                     </button>
                 </div>
             </div>
         </div>
         <div class="panel panel-default size3">
             <div class="panel-heading chosebox">
-                <img src="img/cut.png">选择材质
+                <img src="../img/cut.png">选择材质
             </div>
             <div class="panel-body boxtype1">
                 <div class="chosebox3 pull-left">
@@ -116,7 +116,7 @@
                 </div>
                 <div class="dropdown pull-right">
                     <button type="button" class="btn dropdown-toggle details" id="dropdownMenu1" data-toggle="dropdown">查看详情
-                        <span><img src="img/多边形11.png"></span>
+                        <span><img src="../img/多边形11.png"></span>
                     </button>
                 </div>
             </div>
@@ -145,7 +145,7 @@
             <div><p>TEL：400-0000-000</p>
             <p>企业QQ：123456789</p>
                 <p>微信号：XXXXXXX</p></div>
-            <span class="cc1"><img src="img/erweima.png"></span>
+            <span class="cc1"><img src="../img/erweima.png"></span>
         </div>
     </div>
 </footer>
