--- a/CSShtml/task8-2.html
+++ b/CSShtml/task8-2.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/task8-2.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/task8-2.css"/>
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -43,7 +43,7 @@
         <div class="dp-cell">
             <ul class="nav nav-pills">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="img/holder.png"></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><img src="../img/holder.png"></a>
                     <ul class="scc dropdown-menu">
                         <li><a href="#">关于</a></li>
                         <li><a href="#">推荐</a></li>
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-xs-12">
-                <img src="img/faster.jpg" class="img-responsive">
+                <img src="../img/faster.jpg" class="img-responsive">
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-lg-8 col-md-12 col-xs-12 content1">
                 <div class="title">
-                    <span><img src="img/tudou.png"></span>
+                    <span><img src="../img/tudou.png"></span>
                     <span>土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商之一，也是中国
                 服务用户最多的互联网企业之一。成立10多年以来，腾讯一直秉承一切以用户价值为依归的
                 经营理念，始终处于稳健、高速发展的状态。2004年6月16日，腾讯公司在香港联交所主板
@@ -146,7 +146,7 @@
                 </div>
                 <div class="right1">
                     <p>微信公众平台</p>
-                    <span class="cc1"><img src="img/erweima.png"></span>
+                    <span class="cc1"><img src="../img/erweima.png"></span>
                 </div>
             </div>
         </div>
