--- a/task3-js.html
+++ b/task3-js.html
@@ -22,7 +22,7 @@
      <div class="matt"></div>
     </div>
 </div>
-    <input type="button" class="fanpai" value="查看一号玩家的身份" id="fanpai" onclick="fapai()">
+    <input type="button" class="fanpai" value="查看1号玩家的身份" id="fanpai" onclick="fapai()">
 </main>
 </body>
 </html>
