--- a/CSShtml/task14-3.html
+++ b/CSShtml/task14-3.html
@@ -6,20 +6,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>vote</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" type="text/css" href="css/task14-3.css"/>
-    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../css/hover.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet/less" href="../less/task14-3.less"/>
+    <script src="https://cdn.bootcss.com/less.js/2.7.0/less.js"></script>
 </head>
 <body>
 <header>
     <div class="contact">
         <div>咨询电话:8208208820</div>
         <div>
-            <a href=""><span><img src="img/wechat.png" alt=""></span></a>
-            <a href=""><span><img src="img/qq.png" alt=""></span></a>
-            <a href=""><span><img src="img/sina.png" alt=""></span></a>
+            <a href=""><span><img src="../img/wechat.png" alt=""></span></a>
+            <a href=""><span><img src="../img/qq.png" alt=""></span></a>
+            <a href=""><span><img src="../img/sina.png" alt=""></span></a>
         </div>
     </div>
     <div class="cellphone">
@@ -32,32 +31,23 @@
         <a href="">退出</a>
     </div>
     <div class="navigation">
-        <div><span><img src="img/jinengshu.png" alt=""></span>
-            <span class="link"><a href="">首页</a>
-        <a href="">职业</a>
-        <a href="">推荐</a>
-        <a  class="left" href="">关于</a>
+        <div><span><img src="../img/jinengshu.png" alt=""></span>
+            <span class="link"><a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
+        <a class="left" href="">关于</a>
             </span>
         </div>
     </div>
-    <div class="clearfix"></div>
     <!--手机页面下拉菜单-->
     <div class="dropdown">
-        <button type="button" class="btn dropdown-toggle btn1" id="dropdownMenu1"
-                data-toggle="dropdown">
-            <img src="img/holder.png" alt="">
-        </button>
-        <ul class="dropdown-menu menu1" role="menu" aria-labelledby="dropdownMenu1">
-            <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">职业精英</a>
-            </li>
-            <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">线上学习</a>
-            </li>
-            <li role="presentation">
-                <a role="menuitem" tabindex="-1" href="#">我的学员</a>
-            </li>
-        </ul>
+        <button class="dropbtn" onclick="show()"><img src="../img/holder.png" alt=""></button>
+        <div class="dropdown-content" id="showme">
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
+            <a href="">关于</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
+        </div>
     </div>
 </header>
 <main>
@@ -86,7 +76,7 @@
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
                 <tr class="hda">
-                    <td  class="item1" height="172rem"><img src="img/head22.png" class="img-responsive"></td>
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
                     <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
@@ -97,8 +87,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -131,9 +121,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -143,8 +133,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -177,9 +167,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -189,8 +179,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -226,9 +216,9 @@
     <div class="carrierall">
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -238,8 +228,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -272,9 +262,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -284,8 +274,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -318,9 +308,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -330,8 +320,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -364,9 +354,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -376,8 +366,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -410,9 +400,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -422,8 +412,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -460,9 +450,9 @@
     <div class="carrierall">
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -472,8 +462,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -506,9 +496,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -518,8 +508,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -552,9 +542,9 @@
         </div>
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -564,8 +554,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -601,9 +591,9 @@
     <div class="carrierall">
         <div class="carrier hvr-grow-shadow">
             <table frame="box">
-                <tr>
-                    <td height="172rem"><img src="img/head22.png" alt=""></td>
-                    <td height="172rem">
+                <tr class="hda">
+                    <td  class="item1" height="172rem"><img src="../img/head22.png" class="img-responsive"></td>
+                    <td  class="item2" height="172rem">
                         <h4>Web前端工程师</h4>
                         <p>Web前端开发工程师，主要职责是
                             利用（X）HTML/CSS/JavaScript/
@@ -613,8 +603,8 @@
             </table>
             <table rules="all" width="100%" frame="vsides" cellpadding="20">
                 <tr>
-                    <td class="door">门槛 <img src="img/star.png" alt=""></td>
-                    <td class="door">难易程度 <img src="img/star.png" alt=""> <img src="img/star.png" alt=""></td>
+                    <td class="door">门槛 <img src="../img/star.png" alt=""></td>
+                    <td class="door">难易程度 <img src="../img/star.png" alt=""> <img src="../img/star.png" alt=""></td>
                 </tr>
                 <tr>
                     <td class="door">成长周期&nbsp;&nbsp;&nbsp; <span class="red">1-3</span>年</td>
@@ -663,9 +653,11 @@
         </div>
         <div class="fr">
             <span>微信公众平台</span>
-            <img src="img/erweima.png" alt="">
+            <img src="../img/erweima.png" alt="">
         </div>
     </div>
 </footer>
+<script src="../js/jquery-3.3.1.js"></script>
+<script src="../js/task8.js"></script>
 </body>
 </html>
