--- a/CSShtml/task14.html
+++ b/CSShtml/task14.html
@@ -32,9 +32,9 @@
     </div>
     <div class="navigation">
         <div><span><img src="../img/jinengshu.png" alt=""></span>
-            <span class="link"><a href="">首页</a>
-        <a href="">职业</a>
-        <a href="">推荐</a>
+            <span class="link"><a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
         <a class="left" href="">关于</a>
             </span>
         </div>
@@ -43,9 +43,10 @@
     <div class="dropdown">
         <button class="dropbtn" onclick="show()"><img src="../img/holder.png" alt=""></button>
         <div class="dropdown-content" id="showme">
-            <a href="">首页</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
             <a href="">关于</a>
-            <a href="">职业</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
         </div>
     </div>
 </header>
@@ -84,35 +85,34 @@
 
         <div class="item10">
             <span class="num">1</span><span></span>匹配你现在的个人情况
-            寻找适合自己的岗位<span><img src="../img/arrowgreen.png" alt=""></span>
+            寻找适合自己的岗位<span></span>
         </div>
         <div class="item10">
             <span class="num">2</span><span></span>了解职业前景薪金待遇、
-            竞争压力等<span><img src="../img/arrowgreen.png" alt=""></span>
+            竞争压力等<span></span>
+        </div>
+        <div class="item11-1">
+            <span class="num">3</span><span></span>掌握行业内顶级技能<span></span>
         </div>
         <div class="item11">
-            <span class="num">3</span><span></span>掌握行业内顶级技能<span><img src="../img/arrowgreen.png" alt=""></span>
-        </div>
-        <div class="item11">
-            <span class="num">4</span><span></span>查看职业目标任务<span><img src="../img/arrowgreen.png" alt=""></span>
+            <span class="num">4</span><span></span>查看职业目标任务<span></span>
         </div>
     </div>
     <div class="theway">
 
         <div class="item10">
             <span class="num">5</span><span></span>参考学习资源，掌握 技能点，逐个完成任务
-            寻找适合自己的岗位<span><img src="../img/arrowgreen.png" alt=""></span>
+            寻找适合自己的岗位<span></span>
         </div>
         <div class="item10">
             <span class="num">6</span><span></span>加入班级，和小伙伴们 互帮互助，一块学习
-            竞争压力等<span><img src="../img/arrowgreen.png" alt=""></span>
+            竞争压力等<span></span>
+        </div>
+        <div class="item11-1">
+            <span class="num">7</span><span></span>选择导师，一路引导， 加速自己成长<span></span>
         </div>
         <div class="item11">
-            <span class="num">7</span><span></span>选择导师，一路引导， 加速自己成长<span><img src="../img/arrowgreen.png"
-                                                                               alt=""></span>
-        </div>
-        <div class="item11">
-            <span class="num">8</span><span></span>完成职业技能，升级业界大牛<span><img src="../img/arrowgreen.png" alt=""></span>
+            <span class="num">8</span><span>完成职业技能，升级业界大牛</span><span></span>
         </div>
     </div>
     <h3>优秀学员展示</h3>
