--- a/kill-record.html
+++ b/kill-record.html
@@ -6,17 +6,21 @@
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/task4-2.css">
+    <link rel="stylesheet" href="css/task4.css">
     <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/task4-2.js"></script>
-    <script src="lib/state-machine.js"></script>
+    <script src="js/kill.js"></script>
 </head>
 <body>
-<header><span><img src="img/Backicon.png" alt=""></span>
-    <span>法官日志</span>
+<header><span><button></button><img src="img/Backicon.png" alt=""></span>
+    <span class="title"> 杀手杀人</span>
     <span><img src="img/close.png" alt=""></span></header>
-<main>
+<div class="card">
+    <ul class="content">
 
-        </main>
+    </ul>
+
+
+</div>
+<button class="start" onclick="jump()">选中</button>
 </body>
 </html>
