--- a/pratice.html
+++ b/pratice.html
@@ -1,32 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>weibo</title>
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/practice.css"/>
-    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/practice.css">
+    <title>Document</title>
 </head>
 <body>
-<header>
-    <div class="header_content">
-    <div class="logo">
-     <a href="#">新浪微博</a>
+<div class="main_div">
+    <div class="arrows">
+        <span title="1" class="arrow"><</span>
+        <span title="0" class="arrow" style="float: right">></span>
     </div>
-    <div class="search">
-    <input type="text" class="search_input" value="搜索微博,找人">
-        <input type="button" class="search_btn">
-    </div>
-    <ul class="headerNav">
-     <li><a href="#">首页</a></li>
+
+    <ul class="ul_img">
+        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
     </ul>
-    </div>
-    </header>
-<!--内容-->
-<main>
-<div class="leftArea"></div>
-</main>
+</div>
+
+ <div style="margin-left: 600px">
+    <div class="div_btn"></div>
+    <div class="div_btn"></div>
+    <div class="div_btn"></div>
+    <div class="div_btn"></div>
+</div>
+<script src="/https://cdn.bootcss.com/jquery/3.3.0/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.js"></script>
+<script src="https://cdn.bootcss.com/bootbox.js/3.3.0/bootbox.js"></script>
+<script src="lib/state-machine.js"></script>
+<script src="js/practice.js"></script>
 </body>
 </html>
