--- a/CSShtml/task14-2.html
+++ b/CSShtml/task14-2.html
@@ -31,10 +31,10 @@
     </div>
     <div class="navigation">
         <div><span><img src="../img/jinengshu.png" alt=""></span>
-            <span class="link"><a href="">首页</a>
-        <a href="">职业</a>
-        <a href="">推荐</a>
-        <a  class="left" href="">关于</a>
+            <span class="link"><a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
+        <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
+        <a class="left" href="">关于</a>
             </span>
         </div>
     </div>
@@ -42,9 +42,10 @@
     <div class="dropdown">
         <button class="dropbtn" onclick="show()"><img src="../img/holder.png" alt=""></button>
         <div class="dropdown-content" id="showme">
-            <a href="">首页</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14.html">首页</a>
             <a href="">关于</a>
-            <a href="">职业</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-2.html">推荐</a>
+            <a href="https://bradmatt213.github.io/learngit/CSShtml/task14-3.html">职业</a>
         </div>
     </div>
 </header>
