--- a/CSShtml/task1.html
+++ b/CSShtml/task1.html
@@ -20,8 +20,8 @@
     <div class="box"></div>
 </div>
 <div class="btn1">
-    <button class="btn btn-default" onclick="start()">start</button>
-    <button class="btn btn-default" onclick="stop()">stop</button>
+    <button class="btn btn-default" onclick="start()">开始</button>
+    <button class="btn btn-default" onclick="stop()">停止</button>
 </div>
 </body>
 </html>
