--- a/demo.html
+++ b/demo.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/demos.css">
 </head>
 
 <body>
-<div>
 <ul>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
+    <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+    <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+    <li class="li_img"><img src="img/Image.jpg" alt=""></li>
+    <li class="li_img"><img src="img/Image.jpg" alt=""></li>
 </ul>
-</div>
+
 <script>
 
 </script>
