--- a/pratice.html
+++ b/pratice.html
@@ -10,26 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-<div class="main_div">
-    <div class="arrows">
-        <span title="1" class="arrow"><</span>
-        <span title="0" class="arrow" style="float: right">></span>
-    </div>
+<div ng-app="myApp" ng-controller="myCtrl">
 
-    <ul class="ul_img">
-        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
-        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
-        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
-        <li class="li_img"><img src="img/Image.jpg" alt=""></li>
-    </ul>
 </div>
-
- <div style="margin-left: 600px">
-    <div class="div_btn"></div>
-    <div class="div_btn"></div>
-    <div class="div_btn"></div>
-    <div class="div_btn"></div>
-</div>
+<script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
 <script src="/https://cdn.bootcss.com/jquery/3.3.0/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.js"></script>
 <script src="https://cdn.bootcss.com/bootbox.js/3.3.0/bootbox.js"></script>
