--- a/task2-js.html
+++ b/task2-js.html
@@ -26,11 +26,11 @@
         </div>
     </div>
     <div class="mainmenu">
-        <p>玩家人数 <input type="text" placeholder="10" class="number" id="test" value="10" onchange="change1()">人</p>
+        <p>玩家人数 <input type="text" class="number" id="test" value="10" onchange="changeOne(),over()" >人</p>
         <div>
-            <button id="down"><img src="img/down.png" alt=""></button>
-            <input type="range" id="range" oninput="change()" value="10" max="18" min="5">
-            <button id="up"><img src="img/up.png" alt=""></button>
+            <button id="down" onclick="minus()"><img src="img/down.png" alt=""></button>
+            <input type="range" id="range" oninput="changeTwo()" value="10" max="18" min="5">
+            <button id="up" onclick="add()"><img src="img/up.png" alt=""></button>
         </div>
     </div>
     <button class="fap" onclick="task3()">发牌</button>
