--- a/pratice.html
+++ b/pratice.html
@@ -5,23 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css/jquery.datetimepicker.css"/>
-    <style type="text/css">
-
-        .input-wide{
-            width: 10px;
-        }
-
-    </style>
+    <title>Document</title>
+    <script src="js/practice.js"></script>
 </head>
 <body>
-<h3>DateTimePicker</h3>
-<input type="text" value="" id="datetimepicker"/><br><br>
+<h1>Hello Everyone!</h1>
 </body>
-<script src="js/jquery-3.3.1.js"></script>
-<script src="js/jquery.datetimepicker.full.js"></script>
-<script>
-
-    $('#datetimepicker').datetimepicker();
-
-</script>
+</html>
