--- a/task6-article.html
+++ b/task6-article.html
@@ -1,58 +1,67 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/task6login.css"/>
-    <link rel="stylesheet" href="css/jquery.datetimepicker.css" type="text/css">
-    <script src="http://cdn.static.runoob.com/libs/angular.js/1.4.6/angular.min.js"></script>
-    <script src="/https://cdn.bootcss.com/jquery/3.3.0/jquery.min.js"></script>
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="js/jquery.datetimepicker.full.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.js"></script>
-    <script src="js/task6-login.js"></script>
-    <title>login</title>
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col-lg-2 nav">
-            <h1>洋芋多后台管理系统</h1>
-            <ul class="list-group">
-                <li class="list-group-item"><span><i class="fa fa-pencil"></i> 信息管理 </span><i
-                        class="fa fa-arrow-circle-left"></i>
-                </li>
-                <li class="list-group-item"><span><i class="fa fa-pencil"></i> Article管理</span><i
-                        class="fa fa-arrow-circle-left"></i></li>
-                <li class="list-group-item article">Article列表</li>
-                <li class="list-group-item article">文章管理</li>
-                <li class="list-group-item article">文章管理</li>
-                <li class="list-group-item"><span><i class="fa fa-pencil"></i>  用户管理 </span> <i
-                        class="fa fa-arrow-circle-left"></i>
-                </li>
-                <li class="list-group-item"><span><i class="fa fa-pencil"></i>  内容管理</span><i
-                        class="fa fa-arrow-circle-left"></i>
-                </li>
-            </ul>
-        </div>
-        <div class="col-lg-10 main">
-            <ol class="breadcrumb">
-                <li><a href="#">管理员</a></li>
-                <li><a href="#">admin</a></li>
-                <li><i class="fa fa-power-off"></i></li>
-            </ol>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <span>发布时间 <input id="datetimepicker" type="text" ></span>
-
+<div class="row">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <form role="form">
+                <div class="form-group">
+                    <span>发布时间</span>
+                    <input type="text" class="form-control some_class" value="" id="some_class_1">
+                    <label for="some_class_2"></label>
+                    <input type="text" class="form-control some_class" value="" id="some_class_2">
+                    <span>类型</span>
+                    <select class="form-control">
+                        <option>全部</option>
+                        <option>首页banner/option>
+                        <option>找职位banner</option>
+                        <option>找经营banner</option>
+                        <option>行业大图</option>
+                    </select>
                 </div>
-            </div>
+            </form>
+            <form role="form">
+                <div class="form-group gp1">
+                    <div>
+                        <span>状态</span>
+                        <select class="form-control">
+
+                            <option>全部</option>
+                            <option>上线</option>
+                            <option>草稿</option>
+                        </select>
+                    </div>
+                    <div>
+                        <button class="btn btn-danger">清空</button>
+                        <button class="btn btn-success">搜索</button>
+                    </div>
+                </div>
+            </form>
+
+        </div>
+    </div>
+    <div class="panel panel-default sss">
+        <div class="panel-heading">
+            Article列表
+            <button class="btn btn-success" ui-sref="image"><i class="fa fa-plus"></i>新增</button>
+        </div>
+        <div class="panel-body">
+            <table class="table table-striped" ng-controller="list">
+                <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>名称</th>
+                    <th>类型</th>
+                    <th>发布时间</th>
+                    <th>修改时间</th>
+                    <th>发布者</th>
+                    <th>状态</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tr ng-repeat="x in articleList">
+                    <td>{{$index+1}}</td>
+                    <td>{{x.title}}</td>
+                    <td>{{x.type}}</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
-</body>
-</html>
