--- a/CSShtml/task1.html
+++ b/CSShtml/task1.html
@@ -9,7 +9,7 @@
     <script src="../js/task1.js"></script>
 </head>
 <body>
-<div class="sukudou" id="box1">
+<div class="sukudou">
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
