--- a/demos/regularExpression.html
+++ b/demos/regularExpression.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../js/regulardemo.js"></script>
 </head>
 <body>
 
 </body>
+<script src></script>
 </html>
