--- a/task4-vote.html
+++ b/task4-vote.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>投票</title>
+    <title>法官查看</title>
     <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -12,13 +12,12 @@
 </head>
 <body>
 <header><span><button></button><img src="img/Backicon.png" alt=""></span>
-    <span>请投票</span>
+    <span class="title"> 平民投票</span>
     <span><img src="img/close.png" alt=""></span></header>
 <div class="card">
     <ul class="content">
+
     </ul>
-
-
 </div>
 <button class="start" onclick="jump()">选中</button>
 </body>
