--- a/kill-record.html
+++ b/kill-record.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>法官查看</title>
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/jquery-3.3.1.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/task4.css">
-    <script src="js/jquery-3.3.1.js"></script>
     <script src="js/kill.js"></script>
 </head>
 <body>
@@ -16,12 +15,13 @@
     <span><img src="img/close.png" alt=""></span></header>
 <div class="card">
     <ul class="content">
-
     </ul>
-
-
 </div>
 <button class="start" onclick="jump()">选中</button>
-
+<script>
+        $(".card1").click(function () {
+            console.log($(this));
+        });
+</script>
 </body>
 </html>
