--- a/tasl6-image.html
+++ b/tasl6-image.html
@@ -1,73 +1,140 @@
 <!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/task6login.css"/>
-    <script src="js/jquery-3.3.1.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.js"></script>
-    <script src="https://cdn.bootcss.com/angular.js/1.6.10/angular.min.js"></script>
-    <script src="lib/angular-ui-router.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/task6-login.js"></script>
-    <title>login</title>
-</head>
-<body ng-app="myApp">
 <div class="container">
     <div class="row">
         <div class="panel panel-default sss">
             <div class="panel-heading">
-                Article列表
+                {{articlename}}
             </div>
             <div class="panel-body">
                 <form class="form-horizontal" role="form">
                     <div class="form-group">
                         <label class="col-lg-2 control-label">标题名称</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" id="heading">
+                            <input type="text" class="form-control" id="heading" ng-model="params.title">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-2 control-label">类型</label>
-                        <div class="col-lg-10">
-                        <select class="form-control">
-                            <option>请选择</option>
-                            <option>首页banner</option>
-                            <option>职业banner</option>
-                            <option>职业banner</option>
-                            <option>职业banner</option>
-                        </select>
+                        <div class="col-lg-2">
+                            <select class="form-control" ng-model="params.type">
+                                <option value="5">请选择</option>
+                                <option value="0">首页banner</option>
+                                <option value="1">找职位banner</option>
+                                <option value="2">找精英banner</option>
+                                <option value="3">行业大图banner</option>
+                            </select>
+                        </div>
+                        <div class="col-lg-2" ng-show="params.type==3">
+                            <select class="form-control">
+                                <option>请选择</option>
+                                <option>移动互联网</option>
+                                <option>电子商务</option>
+                                <option>企业服务</option>
+                                <option>020</option>
+                                <option>教育</option>
+                                <option>金融</option>
+                                <option>游戏</option>
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-2 control-label">说明</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" id="info">
+                            <div id="div1" class="toolbar">
+                            </div>
+                            <div id="div2" class="text"> <!--可使用 min-height 实现编辑区域自动增加高度-->
+                                <p id="content">请输入内容</p>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-lg-2 control-label">跳转链接</label>
                         <div class="col-lg-10">
-                            <input type="text" class="form-control" id="jump">
+                            <input type="text" class="form-control" id="jump" ng-model="params.url">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="inputfile" class="col-lg-2 control-label">文件输入</label>
-                        <div class="col-lg-10"><input type="file" id="inputfile">
-                            <p class="help-block">配图预览</p>
+                        <label class="col-lg-2 control-label">配图</label>
+                        <div class="col-lg-10">
+                            <a href="javascript" class="file">
+                                <input type="file" id="inputfile" nv-file-select="" uploader="uploader">选择文件
+                            </a>
                         </div>
                     </div>
                     <div class="form-group">
-                        <button ui-sref="article">取消</button>
+                        <div class="col-lg-2"></div>
+                        <div class="col-lg-10">
+                            <img src="" alt="配图预览" class="img-responsive" ng-if="img_view"
+                                 ng-src="{{img_view}}">
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label"></label>
+                        <div class="col-lg-10">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>图片名</th>
+                                    <th>文件大小</th>
+                                    <th>进度</th>
+                                    <th>操作</th>
+                                    <th>操作</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="item in uploader.queue">
+                                    <td ng-show="uploader.isHTML5">{{item.file.name}}
+                                    </td>
+                                    <td ng-show="uploader.isHTML5">{{item.file.size/1024/1024|number:2 }}MB</td>
+                                    <td>
+                                        <div class="progress" style="margin-bottom: 0;">
+                                            <div class="progress-bar" role="progressbar"
+                                                 ng-style="{'width': item.progress + '%' }"></div>
+                                        </div>
+                                    </td>
+                                    <td class="text-center">
+                                        <span ng-show="item.isSuccess"><i class="glyphicon glyphicon-ok"></i></span>
+                                        <span ng-show="item.isCancel"><i
+                                                class="glyphicon glyphicon-ban-circle"></i></span>
+                                        <span ng-show="item.isError"><i class="glyphicon glyphicon-remove"></i></span>
+                                    </td>
+                                    <td nowrap>
+                                        <button type="button" class="btn btn-success btn-xs" ng-click="item.upload()"
+                                                ng-disabled="item.isReady || item.isUploading || item.isSuccess">
+                                            <span class="glyphicon glyphicon-upload"></span> 上传
+                                        </button>
+                                        <button type="button" class="btn btn-warning btn-xs" ng-click="item.cancel()"
+                                                ng-disabled="!item.isUploading">
+                                            <span class="glyphicon glyphicon-ban-circle"></span> 取消
+                                        </button>
+                                        <button type="button" class="btn btn-danger btn-xs" ng-click="item.remove()">
+                                            <span class="glyphicon glyphicon-trash"></span> 移除
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-2 control-label"></label>
+                        <div class="col-lg-10">
+                            <button class="btn btn-success" ng-disabled="img_view === undefined || myForm.$invalid"
+                                    ng-click="upload()">立即上线
+                            </button>
+                            <button class="btn btn-success" ng-disabled="img_view === undefined || myForm.$invalid"
+                                    ng-click="save()">存为草稿
+                            </button>
+                            <button class="btn pull-right" ui-sref="article">取消</button>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-</body>
-</html>
+<script type="text/javascript">
+    var E = window.wangEditor;
+    var editor1 = new E('#div1', '#div2');  // 两个参数也可以传入 elem 对象，class 选择器
+    editor1.create()
+</script>
