--- a/CSShtml/demo.html
+++ b/CSShtml/demo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Object-oriented JavaScript inheritance</title>
+    <script src="../lib/state-machine.js"></script>
     <script src="demo.js"></script>
 </head>
 
