--- a/CSShtml/demo.html
+++ b/CSShtml/demo.html
@@ -3,17 +3,39 @@
 <head>
     <meta charset="utf-8">
     <title>Object-oriented JavaScript inheritance</title>
-    <script src="../lib/state-machine.js"></script>
+    <script src="../js/jquery-3.3.1.js"></script>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="../js/angular/angular.js"></script>
+    <script src="../js/angular-file-upload/angular-file-upload.js"></script>
+    <script src="../js/angular-animate/angular-animate.js"></script>
+    <script src="../js/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+    <script src="../js/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+    <!--ui-router-->
+    <script src="../js/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="demo.js"></script>
+    <!--表单验证-->
+    <script src="../js/angular-messages/angular-messages.js"></script>
 </head>
-
-<body>
+<body ng-app="myApp" ng-controller="SomeController">
 <div>
-    <label for="jscode">Enter code:</label>
-    <input type="text" id="jscode">
-    <button>Submit code</button>
+    <form name="myForm">
+        <label>
+            Enter your name:
+            <input type="text"
+                   ng-model="name"
+                   ng-pattern="/^((ht|f)tps?):\/\/[\w\-]+(\.[\w\-]+)+([\w\-\.,@?^=%&:\/~\+#]*[\w\-\@?^=%&\/~\+#])?$/"
+                   ng-minlength="5"
+                   ng-maxlength="120"
+                   required />
+        </label>
+        <div ng-messages="myForm.$error" style="color:maroon" role="alert">
+            <div ng-message="required">You did not enter a field</div>
+            <div ng-message="minlength">Your field is too short</div>
+            <div ng-message="pattern">请输入正确的url</div>
+        </div>
+    </form>
 </div>
-
-<p></p>
 </body>
 </html>
