--- a/article.html
+++ b/article.html
@@ -5,8 +5,8 @@
             <div class="form-group">
                 <label class="col-md-4">发布时间</label>
                 <div class="col-md-8">
-                    <input type="text" class="form-control" uib-datepicker-popup ng-model="date" is-open="popup1.opened"
-                           datepicker-options="dateOptions" ng-required="true" ng-click="open1()"
+                    <input type="text" class="form-control" uib-datepicker-popup ng-model="date" is-open="pop.popup1.opened"
+                           datepicker-options="dateOptions" ng-required="true" ng-click="pop.open1()"
                            close-text="关闭" clear-text="清除"
                            current-text="今天">
                 </div>
@@ -17,9 +17,9 @@
                 <label class="col-md-4">—</label>
                 <div class="col-md-8">
                     <input type="text" class="form-control" uib-datepicker-popup ng-model="todate"
-                           is-open="popup2.opened"
+                           is-open="pop.popup2.opened"
                            datepicker-options="dateOptions" ng-required="true"
-                           ng-click="open2()" close-text="关闭" clear-text="清除"
+                           ng-click="pop.open2()" close-text="关闭" clear-text="清除"
                            current-text="今天">
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <td>
                     <a ng-click="upload()">{{x.status|launchfilter}}</a>
                     <a class="active" ng-click="goedit()">编辑</a>
-                    <a ng-click="delete()">删除</a>
+                    <a ng-click="del()">删除</a>
                 </td>
             </tr>
             </tbody>
