--- a/tasl6-image.html
+++ b/tasl6-image.html
@@ -67,8 +67,8 @@
                     <div class="form-group">
                         <div class="col-lg-2"></div>
                         <div class="col-lg-10">
-                            <img src="" alt="配图预览" class="img-responsive" ng-if="img_view"
-                                 ng-src="{{img_view}}">
+                            <img src="" alt="配图预览" class="img-responsive" ng-if="imgreview"
+                                 ng-src="{{imgreview}}">
                         </div>
                     </div>
                     <div class="form-group">
