--- a/tasl6-image.html
+++ b/tasl6-image.html
@@ -122,10 +122,10 @@
                     <div class="form-group">
                         <label class="col-lg-2 control-label"></label>
                         <div class="col-lg-10">
-                            <button class="btn btn-success" ng-disabled="img_view === undefined || myForm.$invalid"
+                            <button class="btn btn-success" ng-disabled="imgreview === undefined || myForm.$invalid"
                                     ng-click="upload(2)">立即上线
                             </button>
-                            <button class="btn btn-success" ng-disabled="img_view === undefined || myForm.$invalid"
+                            <button class="btn btn-success" ng-disabled="imgreview === undefined || myForm.$invalid"
                                     ng-click="upload(1)">存为草稿
                             </button>
                             <button class="btn pull-right" ui-sref="article">取消</button>
