--- a/CSShtml/task.html
+++ b/CSShtml/task.html
@@ -34,7 +34,9 @@
         <li><a href="https://bradmatt213.github.io/learngit/CSShtml/task1" class="hvr-buzz">任务一</a></li>
         <li><a href="https://bradmatt213.github.io/learngit/task2-js" class="hvr-buzz">任务二</a></li>
         <li><a href="https://bradmatt213.github.io/learngit/task3-js" class="hvr-buzz">任务三</a></li>
-        <li><a href="https://bradmatt213.github.io/learngit/task4-js" class="hvr-buzz">任务四</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/task2-js" class="hvr-buzz">任务四</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/login" class="hvr-buzz">任务五</a></li>
+        <li><a href="https://bradmatt213.github.io/learngit/login" class="hvr-buzz">任务六-十</a></li>
     </ol>
 </div>
 </body>
